--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilermaker",
+  "name": "hopper.io",
   "version": "2.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "A clone of paper.io featuring Grace Hopper!",
   "engines": {
     "node": ">= 7.0.0"
   },
