--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.18.0",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
